<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/add_product_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/product_add_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/add_product_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/product_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_product_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/product_name_title"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:background="@drawable/shape_rectangle_border_field"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_product_name_title"/>

    <TextView
        android:id="@+id/add_product_stock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/product_stock_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_product_stock"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/stock_value"
        android:inputType="number"
        android:digits="0123456789"
        android:singleLine="true"
        android:background="@drawable/shape_rectangle_border_field"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        android:maxLength="14"
        app:layout_constraintTop_toBottomOf="@+id/add_product_stock_title"/>

    <TextView
        android:id="@+id/add_product_price_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/product_price_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_stock"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_product_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/price_value"
        android:inputType="number"
        android:digits="0123456789"
        android:singleLine="true"
        android:background="@drawable/shape_rectangle_border_field"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        android:maxLength="14"
        app:layout_constraintTop_toBottomOf="@+id/add_product_price_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_product_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/save_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/shape_rectangle_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_product_price"/>

</androidx.constraintlayout.widget.ConstraintLayout>