<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_list_order"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="2dp"
    android:background="@drawable/shape_rectangle_menu_white_medium">

    <TextView
        android:id="@+id/list_sales_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/list_sales_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:textSize="16sp"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintEnd_toStartOf="@+id/list_sales_qty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_sales_name"/>

    <TextView
        android:id="@+id/list_sales_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/secondaryTextColor"
        android:text="@string/qty_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_sales_product"
        app:layout_constraintBottom_toBottomOf="@+id/list_sales_product"/>

    <TextView
        android:id="@+id/list_sales_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="16sp"
        android:text="@string/price_value"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@id/list_sales_product"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/list_sales_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/status_new"
        android:textSize="14sp"
        android:textColor="@color/colorOrange"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/shape_rectangle_border_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_sales_price"
        app:layout_constraintBottom_toBottomOf="@+id/list_sales_price" />

</androidx.constraintlayout.widget.ConstraintLayout>