<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewmodel.customer.UpdateCustomerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/update_cust_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/white"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/customer_update_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/update_cust_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/customer_type_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"/>

    <Spinner
        android:id="@+id/update_cust_type"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/customer_name_title"
        android:inputType="textAutoComplete"
        android:background="@drawable/shape_rectangle_border_field"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_type_title"/>

    <TextView
        android:id="@+id/update_cust_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/customer_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_type"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/update_cust_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/customer_name_title"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:background="@drawable/shape_rectangle_border_field"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_name_title"/>

    <TextView
        android:id="@+id/update_cust_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/customer_contact_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/update_cust_contact"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/cust_phone_dummy"
        android:inputType="number|phone"
        android:digits="0123456789"
        android:singleLine="true"
        android:background="@drawable/shape_rectangle_border_field"
        android:padding="8dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        android:maxLength="14"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_contact_title"/>

    <TextView
        android:id="@+id/update_cust_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/customer_address_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_contact"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/update_cust_address"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_sans"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:hint="@string/customer_address_title"
        android:inputType="textMultiLine"
        android:background="@drawable/shape_rectangle_border_field"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:maxHeight="120dp"
        android:gravity="start|top"
        android:textAlignment="textStart"
        android:singleLine="false"
        android:maxWidth="100dp"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_address_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/update_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/shape_rectangle_primary"
        app:layout_constraintEnd_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_address"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/delete_title"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/shape_rectangle_warning"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/update_cust_address"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50"/>
</androidx.constraintlayout.widget.ConstraintLayout>