<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_list_customer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:elevation="2dp"
    android:background="@drawable/shape_rectangle_menu_white_medium">

    <TextView
        android:id="@+id/list_cust_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:text="@string/customer_name_title"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_cust_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/list_cust_name_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/list_cust_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/customer_contact_title"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/list_cust_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/list_cust_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/list_cust_contact_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/list_cust_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/customer_address_title"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/list_cust_contact"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/list_cust_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/app_name"
        android:textSize="14sp"
        android:fontFamily="@font/nunito_sans_bold"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintTop_toBottomOf="@+id/list_cust_address_title"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>